--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Victor Maximo - Contact Network</title>
 
+    <link rel="shortcut icon" href="./images/v-icon.png" type="image/x-icon">
+
     <link rel="stylesheet" href="./css/reset.css">
 
     <link rel="stylesheet" href="./css/style.css">
