Customização das cores

--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,13 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="pink">
+<body class="blue">
 
     <div class="container">
 
         <img class="avatar" src="https://github.com/0maximos.png" alt="Imagem de Victor Maximo">
         <h1>Victor Maximo</h1>
-        <p class="username">@victormaximos_</p>
+        <p class="username">Estudante Full-Stack</p>
 
         <ul>
 
@@ -45,6 +45,7 @@
                     📱 WhatsApp
                 </a>
             </li>
+            
         </ul>
 
 
